include build folder as well

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 # Object files
 *.o
 *.ko
-*.obj
+# *.obj
 *.elf
 
 # Linker output
 *.ilk
-*.map
+# *.map
 *.exp
 
 # Precompiled Headers
@@ -29,7 +29,7 @@
 *.dylib
 
 # Executables
-*.exe
+# *.exe
 *.out
 *.app
 *.i*86
@@ -40,7 +40,7 @@
 *.dSYM/
 *.su
 *.idb
-*.pdb
+# *.pdb
 
 # Kernel Module Compile Results
 *.mod*
