Add MASM Support, updated the README.md file to include the new MakefileMasm and updated the MakefileNasm to include the new MakefileMasm. Also added the new MASM source files and updated the build system to build the MASM source files.
The issue is present in NASM only, with MASM with option /Gy issue is not present.

Signed-off-by: Ashraf Ali S <ashraf.ali.s@intel.com>

--- a/MakefileNasm
+++ b/MakefileNasm
@@ -13,7 +13,7 @@ INCLUDE_DIR = -ISrc
 DLINK_FLAGS = /NOLOGO /NODEFAULTLIB /IGNORE:4001 /IGNORE:4281 /OPT:REF /OPT:ICF=10 /MAP /ALIGN:32 /SECTION:.xdata,D /SECTION:.pdata,D /Machine:X64 /LTCG /DLL /SAFESEH:NO /BASE:0 /DRIVER /DEBUG /ALIGN:4096 /DLL /ALIGN:4096 /FILEALIGN:4096 /SUBSYSTEM:CONSOLE /BASE:0x10000 /ENTRY:main
 DLINK = "C:\Program Files\Microsoft Visual Studio\2022\Professional\VC\Tools\MSVC\14.40.33807\bin\Hostx86\x64\link.exe"
 
-OUTPUT_DIR = Build
+OUTPUT_DIR = Build_Nasm
 MD = mkdir
 RD = rmdir /s /q
 
